@@ -1659,8 +1659,8 @@ ham_enable_compression(ham_db_t *db, ham_u32_t level, ham_u32_t flags);
  * be limited to the original record size. The number of actually read
  * bytes is returned in <b>record->size</b>. 
  *
- * @ref HAM_PARTIAL is not allowed if record->size is <= 8. In such a case,
- * @ref HAM_INV_PARAMETER is returned.
+ * @ref HAM_PARTIAL is not allowed if record->size is <= 8 or if Transactions
+ * are enabled. In such a case, @ref HAM_INV_PARAMETER is returned.
  *
  * @param db A valid Database handle
  * @param txn A Transaction handle, or NULL
@@ -1713,7 +1713,7 @@ ham_enable_compression(ham_db_t *db, ham_u32_t level, ham_u32_t flags);
  * @return @ref HAM_INV_PARAMETER if @a HAM_DIRECT_ACCESS is specified,
  *          but the Database is not an In-Memory Database.
  * @return @ref HAM_INV_PARAMETER if @ref HAM_PARTIAL is set but record
- *          size is <= 8
+ *          size is <= 8 or Transactions are enabled
  * @return @ref HAM_KEY_NOT_FOUND if the @a key does not exist
  * 
  * @remark When either or both @ref HAM_FIND_LT_MATCH and/or @ref 
@@ -1756,8 +1756,8 @@ ham_find(ham_db_t *db, ham_txn_t *txn, ham_key_t *key,
  * Using @ref HAM_PARTIAL is not allowed in combination with sorted 
  * duplicates (@ref HAM_SORT_DUPLICATES).
  *
- * @ref HAM_PARTIAL is not allowed if record->size is <= 8. In such a case,
- * @ref HAM_INV_PARAMETER is returned.
+ * @ref HAM_PARTIAL is not allowed if record->size is <= 8 or if Transactions
+ * are enabled. In such a case, @ref HAM_INV_PARAMETER is returned.
  *
  * If you wish to insert a duplicate key specify the flag @ref HAM_DUPLICATE. 
  * (Note that the Database has to be created with @ref HAM_ENABLE_DUPLICATES
@@ -1796,7 +1796,7 @@ ham_find(ham_db_t *db, ham_txn_t *txn, ham_key_t *key,
  * @return @ref HAM_INV_PARAMETER if @ref HAM_PARTIAL was specified <b>AND</b>
  *              duplicate sorting is enabled (@ref HAM_SORT_DUPLICATES)
  * @return @ref HAM_INV_PARAMETER if @ref HAM_PARTIAL is set but record
- *              size is <= 8
+ *              size is <= 8 or Transactions are enabled
  * @return @ref HAM_INV_PARAMETER if the flags @ref HAM_OVERWRITE <b>and</b>
  *              @ref HAM_DUPLICATE were specified, or if @ref HAM_DUPLICATE
  *              was specified, but the Database was not created with 
@@ -2263,8 +2263,8 @@ ham_cursor_clone(ham_cursor_t *src, ham_cursor_t **dest);
  * Using @ref HAM_PARTIAL is not allowed in combination with sorted 
  * duplicates (@ref HAM_SORT_DUPLICATES).
  *
- * @ref HAM_PARTIAL is not allowed if record->size is <= 8. In such a case,
- * @ref HAM_INV_PARAMETER is returned.
+ * @ref HAM_PARTIAL is not allowed if record->size is <= 8 or if Transactions
+ * are enabled. In such a case, @ref HAM_INV_PARAMETER is returned.
  *
  * @param cursor A valid Cursor handle
  * @param key An optional pointer to a @ref ham_key_t structure. If this
@@ -2309,7 +2309,7 @@ ham_cursor_clone(ham_cursor_t *src, ham_cursor_t **dest);
  * @return @ref HAM_INV_PARAMETER if @a cursor is NULL, or if an invalid
  *              combination of flags was specified
  * @return @ref HAM_INV_PARAMETER if @ref HAM_PARTIAL is set but record
- *              size is <= 8
+ *              size is <= 8 or Transactions are enabled
  * @return @ref HAM_CURSOR_IS_NIL if the Cursor does not point to an item, but
  *              key and/or record were requested
  * @return @ref HAM_KEY_NOT_FOUND if @a cursor points to the first (or last)
@@ -2526,8 +2526,8 @@ ham_cursor_find(ham_cursor_t *cursor, ham_key_t *key, ham_u32_t flags);
  * be limited to the original record size. The number of actually read
  * bytes is returned in <b>record->size</b>. 
  *
- * @ref HAM_PARTIAL is not allowed if record->size is <= 8. In such a case,
- * @ref HAM_INV_PARAMETER is returned.
+ * @ref HAM_PARTIAL is not allowed if record->size is <= 8 or if Transactions
+ * are enabled. In such a case, @ref HAM_INV_PARAMETER is returned.
  *
  * When either or both @ref HAM_FIND_LT_MATCH and/or @ref HAM_FIND_GT_MATCH
  * have been specified as flags, the @a key structure will be overwritten
@@ -2641,7 +2641,7 @@ ham_cursor_find(ham_cursor_t *cursor, ham_key_t *key, ham_u32_t flags);
  * @return @ref HAM_INV_PARAMETER if @a HAM_DIRECT_ACCESS is specified,
  *              but the Database is not an In-Memory Database.
  * @return @ref HAM_INV_PARAMETER if @ref HAM_PARTIAL is set but record
- *              size is <= 8
+ *              size is <= 8 or Transactions are enabled
  *
  * @sa HAM_KEY_USER_ALLOC
  * @sa ham_key_t
@@ -2732,8 +2732,8 @@ ham_cursor_find_ex(ham_cursor_t *cursor, ham_key_t *key,
  * did not yet exist. Using @ref HAM_PARTIAL is not allowed in combination 
  * with sorted duplicates (@ref HAM_SORT_DUPLICATES).
  *
- * @ref HAM_PARTIAL is not allowed if record->size is <= 8. In such a case,
- * @ref HAM_INV_PARAMETER is returned.
+ * @ref HAM_PARTIAL is not allowed if record->size is <= 8 or if Transactions
+ * are enabled. In such a case, @ref HAM_INV_PARAMETER is returned.
  *
  * However, if a sort order is specified (see @ref HAM_SORT_DUPLICATES) then
  * the key is inserted in sorted order. In this case, the use of @ref 
@@ -2815,7 +2815,7 @@ ham_cursor_find_ex(ham_cursor_t *cursor, ham_key_t *key,
  *              @ref HAM_SORT_DUPLICATES) but one of HAM_DUPLICATE_INSERT_*
  *              was specified
  * @return @ref HAM_INV_PARAMETER if @ref HAM_PARTIAL is set but record
- *              size is <= 8
+ *              size is <= 8 or Transactions are enabled
  * @return @ref HAM_INV_PARAMETER if the flags @ref HAM_OVERWRITE <b>and</b>
  *              @ref HAM_DUPLICATE were specified, or if @ref HAM_DUPLICATE
  *              was specified, but the Database was not created with 
