@@ -1526,6 +1526,7 @@ public:
         BFC_REGISTER_TEST(MiscPartialTests, invalidFindParametersTest);
         BFC_REGISTER_TEST(MiscPartialTests, reduceSizeTest);
         BFC_REGISTER_TEST(MiscPartialTests, disabledSmallRecordsTest);
+        BFC_REGISTER_TEST(MiscPartialTests, disabledTransactionsTest);
     }
 
     ham_db_t *m_db;
@@ -1726,6 +1727,11 @@ public:
         ham_u8_t buffer[8];
 
         rec.data=(void *)&buffer[0];
+        rec.size=8;
+        BFC_ASSERT_EQUAL(0,
+                ham_insert(m_db, 0, &key, &rec, 0));
+
+        rec.data=(void *)&buffer[0];
         rec.size=1;
         rec.partial_offset=0;
         rec.partial_size=1;
@@ -1761,6 +1767,49 @@ public:
         rec.partial_size=1;
         BFC_ASSERT_EQUAL(HAM_INV_PARAMETER,
                 ham_find(m_db, 0, &key, &rec, HAM_PARTIAL));
+    }
+
+    void disabledTransactionsTest(void)
+    {
+        ham_db_t *db;
+        BFC_ASSERT_EQUAL(0, ham_new(&db));
+        BFC_ASSERT_EQUAL(0, 
+                ham_create_ex(db, BFC_OPATH(".test2"), 
+                        HAM_ENABLE_TRANSACTIONS, 0644, 0));
+
+        ham_cursor_t *c;
+        BFC_ASSERT_EQUAL(0, ham_cursor_create(db, 0, 0, &c));
+
+        ham_key_t key={0};
+        ham_record_t rec={0};
+        ham_u8_t buffer[16];
+
+        rec.data=(void *)&buffer[0];
+        rec.size=16;
+        BFC_ASSERT_EQUAL(0,
+                ham_insert(db, 0, &key, &rec, 0));
+
+        rec.data=(void *)&buffer[0];
+        rec.size=1;
+        rec.partial_offset=0;
+        rec.partial_size=1;
+        BFC_ASSERT_EQUAL(HAM_INV_PARAMETER,
+                ham_insert(db, 0, &key, &rec, HAM_PARTIAL));
+        BFC_ASSERT_EQUAL(HAM_INV_PARAMETER,
+                ham_cursor_insert(c, &key, &rec, HAM_PARTIAL));
+
+        rec.partial_offset=0;
+        rec.partial_size=1;
+        BFC_ASSERT_EQUAL(HAM_INV_PARAMETER,
+                ham_find(db, 0, &key, &rec, HAM_PARTIAL));
+        BFC_ASSERT_EQUAL(HAM_INV_PARAMETER,
+                ham_cursor_find_ex(c, &key, &rec, HAM_PARTIAL));
+        BFC_ASSERT_EQUAL(HAM_INV_PARAMETER,
+                ham_cursor_move(c, &key, &rec, HAM_PARTIAL));
+
+        BFC_ASSERT_EQUAL(0, ham_cursor_close(c));
+        BFC_ASSERT_EQUAL(0, ham_close(db, 0));
+        ham_delete(db);
     }
 };
 
